[gd_scene load_steps=4 format=3 uid="uid://d3y5hfdujeeaf"]

[ext_resource type="Script" path="res://scenes/level_select.gd" id="1_ndvu8"]
[ext_resource type="FontFile" uid="uid://dk5y4y3togj5c" path="res://PhysicsCarGameAssets/Milker.otf" id="2_p7bnm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hfjq"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ndvu8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="level1" type="Button" parent="Control"]
offset_left = 245.0
offset_top = 333.0
offset_right = 674.0
offset_bottom = 427.0
theme_override_fonts/font = ExtResource("2_p7bnm")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hfjq")
text = "LEVEL 1"

[node name="level2" type="Button" parent="Control"]
offset_left = 620.0
offset_top = 332.0
offset_right = 1049.0
offset_bottom = 426.0
theme_override_fonts/font = ExtResource("2_p7bnm")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hfjq")
text = "LEVEL 2"

[node name="backButton" type="Button" parent="Control"]
offset_left = 431.0
offset_top = 506.0
offset_right = 860.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_p7bnm")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hfjq")
text = "BACK"
